@@ -44,17 +44,21 @@
 package org.netbeans.modules.j2ee.weblogic9.ui.wizard;
 
 import java.io.IOException;
+import java.util.HashMap;
 import java.util.HashSet;
+import java.util.Map;
 import java.util.NoSuchElementException;
 import java.util.Set;
 import java.util.Vector;
 import javax.swing.JComponent;
 import javax.swing.event.ChangeEvent;
 import javax.swing.event.ChangeListener;
+import org.netbeans.modules.j2ee.deployment.common.api.Version;
 import org.netbeans.modules.j2ee.deployment.plugins.api.InstanceProperties;
 import org.netbeans.modules.j2ee.weblogic9.WLPluginProperties;
 import org.openide.WizardDescriptor;
 import org.openide.util.NbBundle;
+import org.openide.util.Utilities;
 
 /**
  * The main class of the custom wizard for registering a new server instance.
@@ -76,6 +80,8 @@ public class WLInstantiatingIterator  implements WizardDescriptor.InstantiatingI
      * at creation time and can be changed via the properties sheet
      */
     private static final String DEFAULT_DEBUGGER_PORT = "8787"; // NOI18N
+
+    public static final String DEFAULT_MAC_MEM_OPTS = "-Xmx1024m -XX:PermSize=256m"; // NOI18N
 
     /**
      * The parent wizard descriptor
@@ -135,6 +141,7 @@ public class WLInstantiatingIterator  implements WizardDescriptor.InstantiatingI
      *
      * @return a set of created instance properties
      */
+    @Override
     public Set instantiate() throws IOException {
         // initialize the resulting set
         Set result = new HashSet();
@@ -143,11 +150,19 @@ public class WLInstantiatingIterator  implements WizardDescriptor.InstantiatingI
 
         // if all the data is normally validated - create the instance and
         // attach the additional properties
-        InstanceProperties ip = InstanceProperties.createInstanceProperties(url, username, password, displayName);
-        ip.setProperty(WLPluginProperties.SERVER_ROOT_ATTR, serverRoot);
-        ip.setProperty(WLPluginProperties.DOMAIN_ROOT_ATTR, domainRoot);
-        ip.setProperty(WLPluginProperties.DEBUGGER_PORT_ATTR, DEFAULT_DEBUGGER_PORT);
+        Map<String, String> props = new HashMap<String, String>();
+        props.put(WLPluginProperties.SERVER_ROOT_ATTR, serverRoot);
+        props.put(WLPluginProperties.DOMAIN_ROOT_ATTR, domainRoot);
+        props.put(WLPluginProperties.DEBUGGER_PORT_ATTR, DEFAULT_DEBUGGER_PORT);
+        props.put(WLPluginProperties.DOMAIN_NAME, domainName);
+        props.put(WLPluginProperties.PORT_ATTR, port);
+        if (Utilities.isMac()) {
+            props.put(WLPluginProperties.MEM_OPTS, DEFAULT_MAC_MEM_OPTS);
+        }
 
+        InstanceProperties ip = InstanceProperties.createInstanceProperties(
+                url, username, password, displayName, props);
+        
         // add the created instance properties to the result set
         result.add(ip);
 
@@ -169,6 +184,10 @@ public class WLInstantiatingIterator  implements WizardDescriptor.InstantiatingI
     private String username;
     private String password;
     private String url;
+    private String domainName;
+    private String port;
+    private String host;
+    private Version serverVersion;
 
 
     /**
@@ -178,6 +197,31 @@ public class WLInstantiatingIterator  implements WizardDescriptor.InstantiatingI
      */
     public void setUrl(String url) {
         this.url = url;
+    }
+    
+    /**
+     * Setter for the instance host.
+     *
+     * @param url the new instance host
+     */
+    public void setHost(String host) {
+        this.host = host;
+    }
+    
+    /**
+     * Setter for port.
+     * @param port the new instance port
+     */
+    public void setPort(String port){
+        this.port = port;
+    }
+    
+    /**
+     * Setter for domain name.
+     * @param name the new instance domain name
+     */
+    public void setDomainName(String name){
+        domainName = name;
     }
 
     /**
@@ -199,6 +243,33 @@ public class WLInstantiatingIterator  implements WizardDescriptor.InstantiatingI
      */
     public String getServerRoot() {
         return this.serverRoot;
+    }
+    
+    /**
+     * Getter for the http port
+     *
+     * @return the http port
+     */
+    public String getPort(){
+        return port;
+    }
+    
+    /**
+     * Getter for the host
+     *
+     * @return the host
+     */
+    public String getHost(){
+        return host;
+    }
+    
+    /**
+     * Getter for the domain name
+     *
+     * @return the domain name
+     */
+    public String getDomainName(){
+        return domainName;
     }
 
     /**
@@ -235,6 +306,14 @@ public class WLInstantiatingIterator  implements WizardDescriptor.InstantiatingI
      */
     public void setPassword(String password) {
         this.password = password;
+    }
+
+    public Version getServerVersion() {
+        return serverVersion;
+    }
+
+    public void setServerVersion(Version serverVersion) {
+        this.serverVersion = serverVersion;
     }
 
     ////////////////////////////////////////////////////////////////////////////
